[package]
name = "EventBasedRobotArchitecture"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
ev3dev-lang-rust = {path = "ev3dev-lang-rust", features=["screen"]}
framebuffer = "0.3.1"
glob = "0.3.1"
image = "0.24.7"
imageproc = "0.23.0"
log = "0.4.19"
log4rs = "1.2.0"
rand = "0.8.5"
rusttype = "0.9.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
simple_moving_average = "0.1.2"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[features]
override-driver-path = []

